--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <link rel='stylesheet' href='styles.css'
-
-
+      <h1 class= myClass>Welcome to northwest</h1>
+      <link rel='stylesheet' href='styles.css'>
       <title>SeattleVisitor</title>
-       <p>WelcomeToNorthWast.The Pacific Northwest (in the United States, commonly abbreviated as PNW), sometimes referred to as Cascadia, is a geographic region and megaregion in western North America bounded by the Pacific Ocean to the west and loosely, by the Rocky Mountains on the east. Though no agreed boundary exists, a common conception includes the U.S. states of Oregon and Washington and the Canadian province of British Columbia. Broader conceptions reach north into Alaska and Yukon, south into far northern California and east into Idaho and western Montana, western Wyoming, and western Alberta, to the Continental Divide. Narrower conceptions may be limited to the northwestern US or to the coastal areas west of the Cascade and Coast mountains. The variety of definitions can be attributed to partially overlapping commonalities of the region's history, geography, society, and other factors.</p>
     </head>
 
     <body>
       <header>
+        <p>WelcomeToNorthWast.The Pacific Northwest (in the United States, commonly abbreviated as PNW), sometimes referred to as Cascadia, is a geographic region and megaregion in western North America bounded by the Pacific Ocean to the west and loosely, by the Rocky Mountains on the east. Though no agreed boundary exists, a common conception includes the U.S. states of Oregon and Washington and the Canadian province of British Columbia. Broader conceptions reach north into Alaska and Yukon, south into far northern California and east into Idaho and western Montana, western Wyoming, and western Alberta, to the Continental Divide. Narrower conceptions may be limited to the northwestern US or to the coastal areas west of the Cascade and Coast mountains. The variety of definitions can be attributed to partially overlapping commonalities of the region's history, geography, society, and other factors.</p>
 
-        <h1 class= myClass>ThingsToDos</h1>
+        <h1 class= myClass>Here are the things you can enjoy</h1>
                 <nav>
                         <button id='outdoorActivity'>
                           <li><a href="outdoorActivity.html">outdoorActivity</a></li>
