--- a/about.html
+++ b/about.html
@@ -6,12 +6,11 @@
 </head>
 <body>
   <div id="container">
-<img src="http://vignette4.wikia.nocookie.net/herobrinesarmy/images/b/b1/Triangle_logo.svg/revision/latest/scale-to-width/515?cb=20120622080831" alt="logo img" height="60px" width="60px"/>
-
-  <span><img src="http://www.hamiltonbuhl.com/resize/Shared/Images/Product/HamiltonBuhl-99-Diag-70x70-Tripod-Projector-Screen-Square-Format-Matte-White-Fabric/TPS-T70-01.jpg?lr=t&bw=1000&w=1000&bh=1000&h=1000" alt="logo img" height="60px" width="60px"/>
+<nav>
+  <img src="http://vignette4.wikia.nocookie.net/herobrinesarmy/images/b/b1/Triangle_logo.svg/revision/latest/scale-to-width/515?cb=20120622080831" alt="logo img" height="60px" width="60px"/>
+</nav>
+  <span><img src="http://2.bp.blogspot.com/-f8g27frsR9Q/UHLpjJ-nMKI/AAAAAAAADlg/NB79wvBq57o/s320/306530_474931785880543_1361970750_n+(1).jpg alt="about me" height="600px" width="700px""/>
 </span>
-  <span></span>
-  <span></span>
   </div>
 </body>
 </html>
