renamed file check

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <main>
       <img src="http://vignette4.wikia.nocookie.net/herobrinesarmy/images/b/b1/Triangle_logo.svg/revision/latest/scale-to-width/515?cb=20120622080831" alt="logo img" height="60px" width="60px"/>
       <h1>Bhavya Bharti</h1>
+      <h2>Software Devloper</h2>
     </main>
   </div>
 </body>
