updated file and pushed to origin master

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <img src="http://vignette4.wikia.nocookie.net/herobrinesarmy/images/b/b1/Triangle_logo.svg/revision/latest/scale-to-width/515?cb=20120622080831" alt="logo img" height="60px" width="60px"/>
       <h1>Bhavya Bharti</h1>
       <h2>Software Devloper</h2>
+      <p><q>Experience in PC and laptop troubleshooting, Strong understanding of Microsoft products, Outstanding communication and customer service skills, Excellent problem resolution and analytical skills, Ability to learn quickly in fast-paced environment, technical writing, and testing. Skilled at planning and coordinating projects and tasks, paying close attention to detail.  Bilingual communication skills in English and Hindi.</q> </p>
     </main>
   </div>
 </body>
