--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div id="container">
     <nav>
       <ul>
-        <li>Home</li>
+        <li><a href="file:///C:/Users/bhavy_000/201/cookie-stand/index.html">Home</a></li>
         <li><a href="about.html">Profolio</a></li>
         <li>About</li>
         <li>Contact</li>
@@ -21,5 +21,10 @@
       <p><q>Experience in PC and laptop troubleshooting, Strong understanding of Microsoft products, Outstanding communication and customer service skills, Excellent problem resolution and analytical skills, Ability to learn quickly in fast-paced environment, technical writing, and testing. Skilled at planning and coordinating projects and tasks, paying close attention to detail.  Bilingual communication skills in English and Hindi.</q> </p>
     </main>
   </div>
+  <video
+  src="<iframe width="854" height="480" src="https://www.youtube.com/embed/sLe18h3PDD0" frameborder="0" allowfullscreen></iframe>"
+  poster="nice-default.jpg
+  autoplay
+/>
 </body>
 </html>
