fixed header issue

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 <title>Bhavya Bharti</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="vendor/normalized.css">
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="style/base.css">
 <link rel="stylesheet" type="text/css" href="style/module.css">
 <link rel="stylesheet" type="text/css" href="style/layout.css">
 <link rel="stylesheet" type="text/css" href="vendor/style.css">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
 </head>
 <body>
-  <main id="toHome">
+  <main id="particles-js">
     <div id="content">
       <h1>BHAVYA</h1>
       <p>Hello! My name is Bhavya Bharti, and I'm a Seattle-based freelancer. If I'm not freelancing at some of Seattle's finest digital agencies, I'm working remotely on projects for clients all over the world.
@@ -27,11 +27,12 @@
          <a href="https://www.facebook.com/"><span class="icon-facebook2"></span></a>
       </div>
     </div>
+    <div class="horizentalLine"></div>
   </main>
-  <hr>
+
   <nav class="main-nav">
    <ul>
-      <li><a href="#toHome">HOME</a></li>
+      <li><a href="#particles-js">HOME</a></li>
       <li><a href="#toProject">PROJECTS</a></li>
       <li><a href="#toSkills">SKILS</a></li>
     <li><a href="#toContact">CONTACT</a></li>
@@ -47,7 +48,7 @@
    </div>
    <ul class="extra">
      <li class="project-snipshot1"><a href="file:///C:/Users/bhavy_000/201/vote/index.html"><img src="images/vote.PNG"></a></li>
-     <li class="project-snipshot2"><a href="file:///C:/Users/bhavy_000/201/MasterBlaster/index.html"><img src="images/ping.PNG"></a></li>
+     <li class="project-snipshot2"><a href="file:///C:/Users/bhavy_000/201/MasterBlaster/index.html"><img src="images/pflogo.png"></a></li>
      <li class="project-snipshot3"></li>
    </ul>
  </section>
