restart the code

--- a/index.html
+++ b/index.html
@@ -1,51 +1,40 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <h1 class= myClass>Welcome to northwest</h1>
-      <link rel='stylesheet' href='styles.css'>
-      <title>SeattleVisitor</title>
-    </head>
+<head>
+  <title>Bhavya Bharti</title>
+  <!-- vendor -->
+  <link href="vendor/normalize.css" rel="stylesheet">
+  <!-- styles -->
+ <link href="style/base.css" rel="stylesheet">
+  <link href="style/layout.css" rel="stylesheet">
+  <link href="style/module.css" rel="stylesheet">
+</head>
 
-    <body>
-      <header>
-        <p>WelcomeToNorthWast.The Pacific Northwest (in the United States, commonly abbreviated as PNW), sometimes referred to as Cascadia, is a geographic region and megaregion in western North America bounded by the Pacific Ocean to the west and loosely, by the Rocky Mountains on the east. Though no agreed boundary exists, a common conception includes the U.S. states of Oregon and Washington and the Canadian province of British Columbia. Broader conceptions reach north into Alaska and Yukon, south into far northern California and east into Idaho and western Montana, western Wyoming, and western Alberta, to the Continental Divide. Narrower conceptions may be limited to the northwestern US or to the coastal areas west of the Cascade and Coast mountains. The variety of definitions can be attributed to partially overlapping commonalities of the region's history, geography, society, and other factors.</p>
+<body>
+  <header>
+    <nav></nav>
+  </header>
 
-        <h1 class= myClass>Here are the things you can enjoy</h1>
-                <nav>
-                        <button id='outdoorActivity'>
-                          <li><a href="outdoorActivity.html">outdoorActivity</a></li>
-                        </button>
-                        <button id='museum.html'>
-                          <li><a href="museum.html">museum</a></li>
-                        </button>
-                        <button id= 'topAtteractions'>
-                          <li ><a href="topAtteractions.html">topAtteractions</a></li>
-                        </button>
-                        <button id='food'>
-                          <li><a href="food.html">food</a></li>
-                        </button>
-                        <button id='boats-and-sports'>
-                          <li><a href="https://www.tripadvisor.com/Attractions-g60878-Activities-c55-Seattle_Washington.html">Boat Tours & Water Sports</a></li>
-                        </button>
+<main>
+  <div class="perallax" id="about"><p>Welcome</p></div>
+  <div style="height:200px;background-color:red;font-size:36px">
+Scroll Up and Down this page to see the parallax scrolling effect.
+This div is just here to enable scrolling.
+Tip: Try to remove the background-attachment property to remove the scrolling effect.
+</div>
 
-                </nav>
-    </header>
+  <div class="perallax" id="project"><p>Bhavya</p></div>
+  <div style="height:200px;background-color:red;font-size:36px">
+Scroll Up and Down this page to see the parallax scrolling effect.
+This div is just here to enable scrolling.
+Tip: Try to remove the background-attachment property to remove the scrolling effect.
+</div>
 
-      <main>
-          <p>have fun!</p>
-      </main>
+  <div class="perallax" id="education"><p>What you want?</p></div>
+  <div class="perallax" id="contact"><p>have fun!</p></div>
+</main>
 
-      <aside> <p>dhdhdhdhdhhdhdhdhdhdhhudhfhiuhfuwe</p>
+<footer></footer>
 
-      </aside>
-
-
-      <footer>
-          <li>faqs</li>
-          <li>reviews</li>
-      </footer>
-
-    </body>
-
-
+</body>
 </html>
