parallax effect working

--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
   </header>
 
 <main>
-  <div class="perallax" id="about"><p>Welcome</p></div>
+  <div class="parallax" id="about"><p>Welcome</p></div>
   <div style="height:200px;background-color:red;font-size:36px">
 Scroll Up and Down this page to see the parallax scrolling effect.
 This div is just here to enable scrolling.
 Tip: Try to remove the background-attachment property to remove the scrolling effect.
 </div>
 
-  <div class="perallax" id="project"><p>Bhavya</p></div>
+  <div class="parallax" id="project"><p>Bhavya</p></div>
   <div style="height:200px;background-color:red;font-size:36px">
 Scroll Up and Down this page to see the parallax scrolling effect.
 This div is just here to enable scrolling.
 Tip: Try to remove the background-attachment property to remove the scrolling effect.
 </div>
 
-  <div class="perallax" id="education"><p>What you want?</p></div>
-  <div class="perallax" id="contact"><p>have fun!</p></div>
+  <div class="parallax" id="education"><p>What you want?</p></div>
+  <div class="parallax" id="contact"><p>have fun!</p></div>
 </main>
 
 <footer></footer>
