one page is done

--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
 </head>
 
 <body>
-  <header>
-    <nav></nav>
-  </header>
-
 <main>
-  <div class="parallax" id="about"><p>Welcome</p></div>
+ <div class="parallax" id="about">
+  <nav>
+   <li>Work</li>
+   <li>About</li>
+   <li>Email</li>
+  </nav>
+  <article class="hello">
+    <h1>Hello.</h1>
+    <p>My name is Bhavya Bharti and I've been creating beautiful pixels. I'm a front end Web Developer.</p>
+ </article>
+</div>
   <div style="height:200px;background-color:red;font-size:36px">
 Scroll Up and Down this page to see the parallax scrolling effect.
 This div is just here to enable scrolling.
