new profolio setup

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bhavya Bharti</title>
+    <title>Bhavya Bharti | software developer Seattle WA</title>
+    <meta name="author" content="Bhavya Bharti">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Description / keywords -->
+    <meta name="description" content="Bhavya Bharti is a web developer &amp; back end,front-end developer from Seattle WA">
+    <meta name="keywords" content="Web developer, web designer, angular developer, javascript developer, css3, html5, jquery, angular, express, cordova, front-end developer,  ui designer, user interface designer, user experience designer, wireframe, sass">
+    <meta name="mobile-web-app-capable" content="yes">
     <!-- vendor -->
     <link href="vendor/normalize.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister|Special+Elite" rel="stylesheet">
     <!-- styles -->
     <link href="style/base.css" rel="stylesheet">
     <link href="style/layout.css" rel="stylesheet">
@@ -11,26 +19,30 @@
   </head>
   <body>
     <main>
-     <div class="parallax" id="about">
-       <nav>
-         <li>Work</li>
-         <li>About</li>
-         <li>Email</li>
-       </nav>
-       <article class="hello">
-         <h1>Hello.</h1>
-         <p>My name is Bhavya Bharti and I've been creating beautiful pixels. I'm a front end Web Developer.</p>
-       </article>
-     </div>
-     <div class="parallax" id="project">
-       <article class="hello">
-         <h1>Inbox-health</h1>
-         <p>Inbox health is a web app gor gmail user. It makes unsubscription easy.</p>
-       </article>
-     </div>
-     <div class="parallax" id="education"><p>What you want?</p></div>
-     <div class="parallax" id="contact"><p>have fun!</p></div>
+      <section class="art">
+        <canvas></canvas>
+      </section>
+      <section id="about">
+        <h2>Bhavya Bharti</h2>
+        <p>
+          I'm freelancer full stack developer living in Seattle WA.
+          I have strong technial knowledge with good experiance in
+          back end and frontend design. I spend my days designing systematic
+          methods to help humans interact with digital interfaces in a clean,
+          modern, and usable manner.
+        </p>
+        <ul class="connect-me">
+          <li>say hi</li>
+          <li>LinkedIn</li>
+          <li>Blogs</li>
+        </ul>
+      </section>
     </main>
-    <footer></footer>
+  <footer>
+  <ul>
+    <li>©</li>
+    <li>Bhavya Bharti</li>
+  </ul>
+  </footer>
   </body>
 </html>
