bootstrap and jquery link addition

--- a/index.html
+++ b/index.html
@@ -11,16 +11,23 @@
     <meta name="mobile-web-app-capable" content="yes">
     <!-- vendor -->
     <link href="vendor/normalize.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister|Special+Elite" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister|Special+Elite" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <!-- styles -->
     <link href="style/base.css" rel="stylesheet">
     <link href="style/layout.css" rel="stylesheet">
     <link href="style/module.css" rel="stylesheet">
   </head>
   <body>
+    <header>
+      <li>About</li>
+      <li>music</li>
+    </header>
     <main>
       <section class="art">
-        <canvas></canvas>
+        <canvas id="can"></canvas>
       </section>
       <section id="about">
         <h2>Bhavya Bharti</h2>
@@ -44,5 +51,7 @@
     <li>Bhavya Bharti</li>
   </ul>
   </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
 </html>
