header moves top to left

--- a/app/index.html
+++ b/app/index.html
@@ -9,12 +9,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Description / keywords -->
   <meta name="description" content="Bhavya Bharti is a web developer &amp; back end,front-end developer from Seattle WA">
-  <meta name="keywords" content="Web developer, web designer, angular developer, javascript developer, css3, html5, jquery, angular, express, cordova, front-end developer,  ui designer, user interface designer, user experience designer, wireframe, sass">
+  <meta name="keywords" content="Web developer, front end developer, backend developer, angular developer, javascript developer, css3, html5, jquery, angular, express, cordova, front-end developer,  ui designer, user interface designer, user experience designer, wireframe, sass">
   <meta name="mobile-web-app-capable" content="yes">
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 </head>
 <body>
   <ui-view></ui-view>
+  <footer>
+  <ul>
+    <li>©</li>
+    <li>Bhavya Bharti</li>
+  </ul>
+  </footer>
 </body>
 <html>
