--- a/app/index.html
+++ b/app/index.html
@@ -2,11 +2,9 @@
 <html ng-app="profolio">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>Bhavya Bharti | software developer Seattle WA</title>
   <meta name="author" content="Bhavya Bharti">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Description / keywords -->
   <meta name="description" content="Bhavya Bharti is a web developer &amp; back end,front-end developer from Seattle WA">
   <meta name="keywords" content="Web developer, front end developer, backend developer, angular developer, javascript developer, css3, html5, jquery, angular, express, cordova, front-end developer,  ui designer, user interface designer, user experience designer, wireframe, sass">
