--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
   <meta name="mobile-web-app-capable" content="yes">
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+  <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
   <ui-view></ui-view>
