--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html ng-app="profolio">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' http://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>Bhavya Bharti | software developer Seattle WA</title>
   <meta name="author" content="Bhavya Bharti">
