--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html ng-app="profolio">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, font-src 'self' https://fonts.gstatic.com data:">
   <title>Bhavya Bharti | software developer Seattle WA</title>
   <meta name="author" content="Bhavya Bharti">
   <!-- Description / keywords -->
