--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, font-src 'self' https://fonts.gstatic.com data: ">
-  <title>Bhavya Bharti | software developer Seattle WA</title>
+  <title>Bhavya Bharti | Web developer Seattle WA</title>
   <meta name="author" content="Bhavya Bharti">
   <!-- Description / keywords -->
   <meta name="description" content="Bhavya Bharti is a web developer &amp; back end,front-end developer from Seattle WA">
